--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
         "build": "yarn clean && tsc"
     },
     "peerDependencies": {
-        "@mui/icons-material": "^5.2.0",
         "@mui/material": "^5.2.2",
+        "@mui/icons-material": "^5.2.0",
+        "@mui/styles": "^5.2.2",
         "@solana/wallet-adapter-base": "^0.7.0",
         "@solana/wallet-adapter-react": "^0.13.0",
         "@solana/wallet-adapter-wallets": "^0.11.0",
@@ -29,8 +30,9 @@
         "react-dom": "^17.0.2"
     },
     "devDependencies": {
-        "@mui/icons-material": "^5.2.0",
         "@mui/material": "^5.2.2",
+        "@mui/icons-material": "^5.2.0",
+        "@mui/styles": "^5.2.2",
         "@solana/wallet-adapter-base": "^0.7.0",
         "@solana/wallet-adapter-react": "^0.13.0",
         "@solana/wallet-adapter-wallets": "^0.11.0",
