--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,15 @@
 {
-    "extends": "../../../tsconfig.json",
-    "compilerOptions": {
-        "noEmit": false,
-        "outDir": "lib"
-    },
-    "include": ["src"]
+  //"extends": "../../../tsconfig.json",
+  "compilerOptions": {
+    "noEmit": false,
+    "outDir": "lib",
+    "target": "es6",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "jsx": "react",
+    "paths": {
+      "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
+    }
+  },
+  "include": ["src"]
 }
